# mechanix-shell

./: .gitignore  .mechanix-gui-release-manifest.json  mechanix-gui-release-config.json
.github/workflows/: build-and-release-gui.yml
apps/: Cargo.toml
apps/camera/: Cargo.toml
apps/camera/src/contexts/: camera.rs
apps/files/: Cargo.toml
apps/files/src/: folder_options.rs  gui.rs
apps/files/src/modals/: confirmation_modal.rs  delete_modal.rs  entry_row.rs  file_details.rs  file_options.rs  file_viewer.rs  mod.rs
apps/settings-app/: Cargo.toml
apps/settings-app/src/: gui.rs
apps/settings-app/src/screens/network/: add_network.rs  network_details.rs  networking.rs  saved_network_details.rs  unknown_network_details.rs
apps/settings-app/src/screens/network/wireless_model/: mod.rs
apps/settings-app/src/screens/settings_menu/: settings_screen.rs
commons/networkmanager/src/: network_manager.rs
config/: Cargo.toml
config/cli/: Cargo.toml
config/client/: Cargo.toml
config/server/: Cargo.toml
services/: Cargo.toml
services/ctl/bluetooth/: Cargo.toml
services/ctl/date-time/: Cargo.toml
services/ctl/display/: Cargo.toml
services/ctl/host-metrics/: Cargo.toml
services/ctl/hw-buttons/: Cargo.toml
services/ctl/keyboard/: Cargo.toml
services/ctl/language/: Cargo.toml
services/ctl/network/: Cargo.toml
services/ctl/power/: Cargo.toml
services/ctl/sharing/: Cargo.toml
services/ctl/sound/: Cargo.toml
services/ctl/users/: Cargo.toml
services/desktop/client/dbus/: Cargo.toml
services/desktop/client/dbus/src/proxies/: power_proxy.rs
services/desktop/server/: Cargo.toml  settings.yml.example
services/desktop/server/src/: main.rs
services/desktop/server/src/dbus/interfaces/: notification_interface.rs
services/desktop/server/src/settings/: lock_button.rs  mod.rs
services/store/client/dbus/: Cargo.toml
services/store/server/: Cargo.toml
services/system/client/dbus/: Cargo.toml
services/system/client/dbus/src/: lib.rs
services/system/client/dbus/src/proxies/: mod.rs
services/system/server/dbus/: Cargo.toml
services/system/server/dbus/src/: lib.rs  main.rs
services/system/server/dbus/src/interfaces/: mod.rs
shell/: Cargo.toml
shell/commons/echo-client/: Cargo.toml
shell/commons/status-bar/: Cargo.toml
shell/commons/status-bar/src/modules/wireless/: mod.rs
shell/greeter/: Cargo.toml
shell/keyboard/: Cargo.toml
shell/launcher/: Cargo.toml
shell/launcher/src/modules/running_apps/: running_apps_carousel.rs
shell/launcher/src/pages/: app_drawer.rs
shell/notification/: Cargo.toml
shell/polkit-agent/: Cargo.toml
shell/rotate-daemon/: Cargo.toml
shell/xdg-desktop-portal-mechanix/: Cargo.toml  README.md
shell/xdg-desktop-portal-mechanix/src/: connections.rs  main.rs
shell/xdg-desktop-portal-mechanix/src/gui/: file_chooser_handler.rs  mod.rs  xdg_portal_handler.rs
shell/xdg-desktop-portal-mechanix/src/interface/: file_chooser.rs
shell/xdg-portal-poc/: Cargo.toml  README.md
shell/xdg-portal-poc/src/: gui.rs  main.rs
shell/xdg-portal-poc/src/interface/: file_chooser.rs  mod.rs
