[package]
name = "mechanix-config-client"
description = "Client library for storing, retrieving and subscribing to settings key-values"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
