[package]
name = "mechanix-rotate-daemon"
description = "Rotation daemon for the Mechanix shell"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
