[package]
name = "mechanix-date-time-ctl"
description = "Date-time controller for Mechanix services"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
