[package]
name = "mechanix-power-ctl"
description = "Power controller for Mechanix services"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
battery = "0.7.8"
system_shutdown = "*"
