[package]
name = "mechanix-sound-ctl"
description = "Sound controller for Mechanix services"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
libpulse-binding = "2.28.1"
anyhow.workspace = true
serde.workspace = true